# react-voice-agent

./: README.md  pyproject.toml
src/: app.py  streamlit_app.py
src/langchain_openai_voice/: __init__.py
src/server/: prompt.py  save_recording.py  tools.py  utils.py
src/server/static/: audio-processor-worklet.js  index.html
