[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.11"
authors = [
    { name="Your Name", email="your.email@example.com" }
]

[tool.poetry]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
  { include = "langchain_openai_voice", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.3.19"
langgraph = "^0.3.5"
starlette = "^0.46.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
websockets = "13.1"
langchain-core = "^0.3.43"
openai = "^1.66.3"
numpy = "^2.2.3"
scipy = "^1.15.2"
webrtcvad = "^2.0.10"
langsmith = "^0.3.15"
setuptools = "^77.0.3"
streamlit = "^1.43.2"
pydub = "^0.25.1"
ffmpeg = "^1.4"
python-multipart = "^0.0.20"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core", "setuptools"]
build-back-end = "poetry.core.masonry.api"